; ModuleID = '/home/carl/AnghaBench/openwrt/package/utils/nvram/src/extr_cli.c_nvram_open_rdonly.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/utils/nvram/src/extr_cli.c_nvram_open_rdonly.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NVRAM_RO = common dso_local global i32 0, align 4
@NVRAM_STAGING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @nvram_open_rdonly to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @nvram_open_rdonly() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = call i8* (...) @nvram_find_staging()
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i8* (...) @nvram_find_mtd()
  store i8* %8, i8** %2, align 8
  br label %9

9:                                                ; preds = %7, %0
  %10 = load i8*, i8** %2, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %25

12:                                               ; preds = %9
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* @NVRAM_RO, align 4
  %15 = call i32* @nvram_open(i8* %13, i32 %14)
  store i32* %15, i32** %3, align 8
  %16 = load i8*, i8** %2, align 8
  %17 = load i32, i32* @NVRAM_STAGING, align 4
  %18 = call i64 @strcmp(i8* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %12
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @free(i8* %21)
  br label %23

23:                                               ; preds = %20, %12
  %24 = load i32*, i32** %3, align 8
  store i32* %24, i32** %1, align 8
  br label %26

25:                                               ; preds = %9
  store i32* null, i32** %1, align 8
  br label %26

26:                                               ; preds = %25, %23
  %27 = load i32*, i32** %1, align 8
  ret i32* %27
}

declare dso_local i8* @nvram_find_staging(...) #1

declare dso_local i8* @nvram_find_mtd(...) #1

declare dso_local i32* @nvram_open(i8*, i32) #1

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
